--- a/home.html
+++ b/home.html
@@ -40,8 +40,8 @@
 							<li class="serviceitem item11"> Mailbox Lockout</li>
 						</ul>
 					</div>
-					<div class="pictures">
-						<figure class="fig"> <!-- for the image and caption  -->
+					<div class="picturewrapper">
+						<figure class="fig"> 
 							<img src="photos/car.jpg" height="300">
 							<figcaption> Cars, Keys and Transponders </figcaption>
 						</figure>
