--- a/home.html
+++ b/home.html
@@ -17,9 +17,15 @@
 					<div class="keyshift"><img src="photos/rekey.png" class="titlepic" height="80" width="150"></img></div>
 				
 				</div>
+
+				<div class="hidecontainer">
+					<p class="hideme"> Hide Me! </p>
+				</div>
 				<div class="rightwrapper">
+
 					<h1 class="mainright"> 24 Hour Answering </h1>
 					<h1 class="mainright"> Response in 10 minutes </h1>
+
 				</div>
 			</div>
 			<div class="underhead">
